# argus_vision

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  package.xml
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
catkin_generated/installspace/: cv_pipeline.pc  cv_pipelineConfig.cmake
catkin_generated/stamps/cv_pipeline/: package.xml.stamp
config/: left.yaml  right.yaml
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: cv_pipeline.pc
devel/share/cv_pipeline/cmake/: cv_pipelineConfig.cmake
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/gtest/: CTestTestfile.cmake  Makefile
launch/: calibrate.launch  compressed_view.launch  cv_pipeline.launch  stereo.launch  stereo_view.launch  uvc_camera_stereo.launch
src/: camera_check.cpp  combine_disparity.cpp  stereo_publisher.cpp
