<?xml version="1.0"?>
<package format="2">
  <name>argus_vision</name>
  <version>0.0.0</version>
  <description>The argus_vision package</description>
  <author>M. Kaan Tasbas </author>
  <maintainer email="mktasbas@gmail.com">M. Kaan Tasbas</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/eyes-of-argus/argus_vision</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_calibration</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cv_camera</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>stereo_image_proc</build_depend>
  <build_depend>argus_rail</build_depend>

  <build_export_depend>camera_calibration</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>cv_camera</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>image_view</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>opencv3</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>stereo_msgs</build_export_depend>
  <build_export_depend>stereo_image_proc</build_export_depend>

  <exec_depend>camera_calibration</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cv_camera</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>opencv3</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>
  <exec_depend>argus_rail</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
